tests/packaging-test/test_out/invalid-module.txt
error: cannot load source file
 --> invalid-module\root\a.ctl:2:6
  |
2 |     "./a/b"
  |      ^^^^^ caused by this
  |
  = info: related path: invalid-module\root\a\b.ctl
  = info: trace: file not found

